* Fixed an issue when formtastic fails to determine if a checkbox is checked with custom checked and unchecked values (thanks to Eugene Bolshakov)

1.2.3

* Removed deprecated methods input_field_set, button_field_set, boolean_select_input, boolean_radio_input and boolean_radio_input
* Removed deprecated :class option on commit_button (use :input_html instead)
* Fixed that stylesheets and initializers directories would be removed on uninstalling
* Fixed some documentation and formatting
* Fixed test coverage issues under Ruby 192 and Rails 2
* Fixed that input_html options were not being passed down to checkbox tags
* Changed internal duplication of the options hash so that the same options hash can be re-used over multiple inputs without being altered
* Changed internal configuration to use class_attribute when available (Rails 3) to avoid deprecation warnings
* Added Rails 3 compatible form generator templates in addition to existing Rails 2 support
* Added reflection on allow_blank option when determining the 'required' status of an input


1.2.2

* Removed deprecated aliased input names (:as => :boolean_select, :as => :boolean_radio_input
* Removed deprecated aliased method names (input_field_set, button_field_set)
* Removed deprecated :class => 'whatever' on commit_button
* Fixed that classes in :button_html were being merged into :wrapper_html
* Fixed that :include_blank was being ignored (always false) for multi selects 
* Fixed that we should reflect on allow_blank option to determine required status with validates_inclusion_of
* Added the ability to pass :input_html options be passed to the checkbox on a boolean input
* Developers: Added bundler support to for developer/contribution
* Developers: Fixed spec coverage under Rails 2 and Ruby 1.9.2

1.2.1

* test suite compatibilities with Rails 3.0.3

1.2.1.beta3

* Fixed bad merge related to :boolean inputs in 1.2.1.beta

1.2.1.beta2

* Fixed typos in gemspec post-install message

1.2.1.beta
