@@ -1,4 +1,5 @@
 * Fixed an issue when formtastic fails to determine if a checkbox is checked with custom checked and unchecked values (thanks to Eugene Bolshakov)
+* Fixed that the hidden input rendered with a boolean checkbox did nt use the custom :name from :input_html options hash
 
 1.2.3
 
